
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]


## [2.15.13] - 2024-10-18
### Fixed
- [PORTAL] [TOTP] Use lowercase login when assigning a TOTP profile to a username
- [API_PARSER] [SENTINELONE] Properly get all techniques' names


## [2.15.12] - 2024-10-08
### Fixed
- [API_PARSER] [BEYONDTRUST_PRA] Add missing migration step to set default token value


## [2.15.11] - 2024-10-03
### Added
- [API_PARSER] [BEYONDTRUST_PRA] New API parser BEYONDTRUST_PRA
### Fixed
- [CLUSTER] [PF] Correctly reload configurations when changing SSH/GUI access rules
- [API_PARSER] [CYBEREASON] Update timestamp when no logs are received during the last 24h
- [API_PARSER] [REACHFIVE] Store access token & avoid too many or too large requests


## [2.15.10] - 2024-08-09
### Fixed
- [API_PARSER] [NOZOMI_PROBE] Update timestamp when no logs received during last 24h
- [API_PARSER] [GATEWATCHER_ALERTS] Delayed logs gathering by 5 minutes to avoid alerts being not inserted in API when we're making our request


## [2.15.9] - 2024-07-25
### Fixed
- [API_PARSER] [HARFANGLAB] Hotfix to add a check when powershell_command object is None


## [2.15.8] - 2024-07-24
### Fixed
- [API_PARSER] [HARFANGLAB] Truncate details_powershell.PowershellCommand to 16384 char (as logs can be up to 2M)


## [2.15.7] - 2024-07-22
### Changed
- [API_PARSER] [CROWDSTRIKE] Allow to disable fetching of 'incident' logs
### Fixed
- [API_PARSER] [GATEWATCHER_ALERTS] Avoid missing logs by setting the last_api_call the timestamp of the last retrieved log
- [API_PARSER] [NOZOMI] Some alerts were not collected - because inserted after newer alerts


## [2.15.6] - 2024-07-12
### Added
- [API_PARSER] [WAF_BARRACUDA] New API parser WAF_BARRACUDA
### Fixed
- [API_PARSER] [HARFANGLAB] Handle independent saved timestamps for 'alerts' and 'threats' logs